--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jasonmzx/express_checkers#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongodb": "^4.1.1",
     "uuid": "^8.3.2",
     "ws": "^8.2.0"
